<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_principal"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_user"
        android:textSize="@dimen/textSize_base"/>

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        android:textSize="@dimen/textSize_base"/>

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textSize="@dimen/textSize_base"/>

    <EditText
        android:id="@+id/editText_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_gender"
        android:textSize="@dimen/textSize_base"/>

    <Button
        android:id="@+id/boton_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_submit"
        android:textSize="@dimen/textSize_base"/>


</LinearLayout>